[package]
name = "harper"
version = "0.0.2"
edition = "2021"
authors = ["Sergio Benitez <sb@sergio.bz>"]
license = "MIT OR Apache-2.0"
description = "A library to implement SSGs."
repository = "https://github.com/rwf2/harper"
readme = "../README.md"

[features]
default = ["sass"]
sass = ["grass"]
plugins = ["mlua", "thread_local"]

[dependencies]
once_cell = "1.12.0"
deunicode = "1.3"
serde_json = "1.0"
jwalk = "0.8"
rayon = "1.5"
serde = { version = "1", features = ["rc", "derive"] }
toml = { version = "0.8", features = ["preserve_order"] }
memchr = "2"
either = "1.10"
grass = { version = "0.13", default-features = false, features = ["random"], optional = true }
pulldown-cmark = { version = "0.10", default-features = false, features = ["simd", "html"] }

parking_lot = "0.12"
dashmap = { version = "5.4", features = ["rayon", "inline"] } # is there a better alternative?
rustc-hash = { version = "1.1" }
boxcar = "0.2.4"

[dependencies.svgbobdoc]
version = "0.3"
features = ["enable"]

[dependencies.mlua]
version = "0.9.5"
features = ["send", "luau", "serialize"]
optional = true

[dependencies.thread_local]
version = "1.1"
optional = true

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["alloc", "std"]

[dependencies.syntect]
version = "5"
default-features = false
features = ["html", "default-syntaxes", "regex-onig", "plist-load"]

[dependencies.minijinja]
package = "unified-minijinja"
version = "=0.0.2"
default-features = false
features = ["speedups", "loader", "builtins", "debug", "deserialization", "macros", "multi_template"]

[dev-dependencies]
static_assertions = "1.1"
