[package]
name = "mockingbird"
version = "0.0.2"
edition = "2021"
authors = ["Sergio Benitez <sb@sergio.bz>"]
license = "MIT OR Apache-2.0"
description = "An SSG implemented with harper."
repository = "https://github.com/rwf2/harper"
readme = "../README.md"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
rustc-hash = { version = "1.1" }
xflags = "0.3.2"

[dependencies.harper]
version = "0.0.2"
path = "../lib"
